# lidar_camera_calib

./: README.md  all_modules.launch
calibration_backend_optimization/: CMakeLists.txt  package.xml
calibration_backend_optimization/debug_data/analyze_data/: analyze_plane_data.m  formAb.m  scratch_pad.m
calibration_backend_optimization/debug_data/basler/lines/camera/: camera_line1_view0.csv  camera_line1_view1.csv  camera_line1_view10.csv  camera_line1_view11.csv  camera_line1_view12.csv  camera_line1_view13.csv  camera_line1_view14.csv  camera_line1_view15.csv  camera_line1_view16.csv  camera_line1_view17.csv  camera_line1_view18.csv  camera_line1_view19.csv  camera_line1_view2.csv  camera_line1_view20.csv  camera_line1_view21.csv  camera_line1_view3.csv  camera_line1_view4.csv  camera_line1_view5.csv  camera_line1_view6.csv  camera_line1_view7.csv  camera_line1_view8.csv  camera_line1_view9.csv  camera_line2_view0.csv  camera_line2_view1.csv  camera_line2_view10.csv  camera_line2_view11.csv  camera_line2_view12.csv  camera_line2_view13.csv  camera_line2_view14.csv  camera_line2_view15.csv  camera_line2_view16.csv  camera_line2_view17.csv  camera_line2_view18.csv  camera_line2_view19.csv  camera_line2_view2.csv  camera_line2_view20.csv  camera_line2_view21.csv  camera_line2_view3.csv  camera_line2_view4.csv  camera_line2_view5.csv  (+48 more)
calibration_backend_optimization/debug_data/basler/lines/lidar/: line1_0.csv  line1_1.csv  line1_10.csv  line1_11.csv  line1_12.csv  line1_13.csv  line1_14.csv  line1_15.csv  line1_16.csv  line1_17.csv  line1_18.csv  line1_19.csv  line1_2.csv  line1_20.csv  line1_21.csv  line1_3.csv  line1_4.csv  line1_5.csv  line1_6.csv  line1_7.csv  line1_8.csv  line1_9.csv  line2_0.csv  line2_1.csv  line2_10.csv  line2_11.csv  line2_12.csv  line2_13.csv  line2_14.csv  line2_15.csv  line2_16.csv  line2_17.csv  line2_18.csv  line2_19.csv  line2_2.csv  line2_20.csv  line2_21.csv  (+51 more)
calibration_backend_optimization/debug_data/draw/: C_T_L_basler_VLP.txt  C_T_L_basler_VLP_GP.txt  C_T_L_basler_os.txt  C_T_L_basler_os_GP.txt  C_T_L_left_VLP.txt  C_T_L_left_VLP_GP.txt  C_T_L_left_os.txt  C_T_L_left_os_GP.txt  C_T_L_right_VLP.txt  C_T_L_right_VLP_GP.txt  C_T_L_right_os.txt  C_T_L_right_os_GP.txt  PoseVsRepErr_basler_VLP_GP.csv  PoseVsRepErr_basler_os.csv  PoseVsRepErr_basler_os_GP.csv  PoseVsRepErr_left_VLP.csv  PoseVsRepErr_left_VLP_GP.csv  PoseVsRepErr_left_os.csv  PoseVsRepErr_left_os_GP.csv  PoseVsRepErr_right_VLP.csv  PoseVsRepErr_right_VLP_GP.csv  PoseVsRepErr_right_os.csv  PoseVsRepErr_right_os_GP.csv  avg_reproj_err  fit3DLine.m  octave-workspace  plane_line_together.m  poseVsRepErrPlots_basler_VLP.m  poseVsRepErrPlots_basler_VLP_GP.m  poseVsRepErrPlots_basler_os.m  poseVsRepErrPlots_basler_os_GP.m  poseVsRepErrPlots_left_VLP.m  poseVsRepErrPlots_left_VLP_GP.m  poseVsRepErrPlots_left_os.m  poseVsRepErrPlots_left_os_GP.m  poseVsRepErrPlots_right_VLP.m  poseVsRepErrPlots_right_VLP_GP.m  poseVsRepErrPlots_right_os.m  poseVsRepErrPlots_right_os_GP.m  read_msg_cal_data.m  (+22 more)
calibration_backend_optimization/debug_data/simulation/: getLineEquation.m  getRotX.m  getRotY.m  getRotZ.m  sim_lidar_cam_views.m
calibration_backend_optimization/debug_data/simulation/data/: all_normals1.csv  all_normals10.csv  all_normals100.csv  all_normals101.csv  all_normals102.csv  all_normals103.csv  all_normals104.csv  all_normals105.csv  all_normals106.csv  all_normals107.csv  all_normals108.csv  all_normals109.csv  all_normals11.csv  all_normals110.csv  all_normals111.csv  all_normals112.csv  all_normals113.csv  all_normals114.csv  all_normals115.csv  all_normals116.csv  all_normals117.csv  all_normals118.csv  all_normals119.csv  all_normals12.csv  all_normals120.csv  all_normals121.csv  all_normals122.csv  all_normals123.csv  all_normals124.csv  all_normals125.csv  all_normals126.csv  all_normals127.csv  all_normals128.csv  all_normals129.csv  all_normals13.csv  all_normals130.csv  all_normals131.csv  all_normals132.csv  all_normals133.csv  all_normals134.csv  (+3460 more)
calibration_backend_optimization/include/: calibration_error_term.h
calibration_backend_optimization/launch/: calibration_test_initialization_basler_os.launch
calibration_backend_optimization/result/: C_T_L_left.txt  C_T_L_right.txt  read_result.m
calibration_backend_optimization/src/: calibration_node_test_initialization.cpp
frontend/rotate_cloud/: package.xml
frontend/rotate_cloud/launch/: rotate_os_cloud.launch
frontend/rotate_cloud/src/: rotate_cloud_node.cpp
line_msg/: CMakeLists.txt  package.xml
line_msg/msg/: line.msg
projection/: CMakeLists.txt
projection/launch/: basler_line_projection_node_os.launch  basler_projection_node_os.launch
projection/src/: line_projection_node.cpp  projection_node.cpp
random_frame_generator/: CMakeLists.txt  package.xml
random_frame_generator/data/basler_os/lidar_data/: pointcloud0.pcd  pointcloud1.pcd  pointcloud10.pcd  pointcloud11.pcd  pointcloud12.pcd  pointcloud13.pcd  pointcloud14.pcd  pointcloud15.pcd  pointcloud16.pcd  pointcloud17.pcd  pointcloud18.pcd  pointcloud19.pcd  pointcloud2.pcd  pointcloud20.pcd  pointcloud21.pcd  pointcloud22.pcd  pointcloud23.pcd  pointcloud24.pcd  pointcloud25.pcd  pointcloud26.pcd  pointcloud27.pcd  pointcloud28.pcd  pointcloud29.pcd  pointcloud3.pcd  pointcloud30.pcd  pointcloud31.pcd  pointcloud4.pcd  pointcloud5.pcd  pointcloud6.pcd  pointcloud7.pcd  pointcloud8.pcd  pointcloud9.pcd
random_frame_generator/launch/: random_frame_generator_basler_os.launch
random_frame_generator/src/: random_frame_generator_node.cpp
rotate_cloud/: CMakeLists.txt
rotate_cloud/src/: rotate_cloud_node.cpp
target_line_detector/: CMakeLists.txt  package.xml
target_line_detector/launch/: target_line_detector_node_os.launch
target_line_detector/src/: target_line_detector_node.cpp
(+508 files in other folders)
